# hse_c_autumn_2024

./: .gitignore  CMakeLists.txt  main.c
HW1/: task1.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
HW10/: readme.md
HW2/: The_longest_sentence.c  input.txt  ip.c  palindrome.c  strcat.c  sudoku.c
HW7/: Cool_int_arr_dup.c  Cool_strcmp.c  Cool_strstr.c
HWBash/: id_rsa.key  info.md  task1.sh  task2.sh  task3.sh
HWCompiler/: id_rsa  task1.md
hardwork/: kek.c  main.cpp
hw6/: solution.c
hwMakefile/: Makefile
lec3/: main  main.c
sem2/: Длина числа в шестнадцатеричном представлении.c  Ряд фибоначчи.c  Уникальные буквы в строке [2].c
sem5/: a.out  taskA.c  taskB.c  taskC.c
sem8/: task.c
sem9/: sem9.c
