cmake_minimum_required(VERSION 3.29)
project(hw2 C)

set(CMAKE_C_STANDARD 11)

add_executable(
        hw2 main.c
        HW1/task1.c
        HW1/task2.c
        HW1/task3.c
        HW1/task4.c
        HW1/task5.c
        HW1/task6.c
        HW1/task7.c
        HW1/task8.c
        HW1/task9.c
        HW1/task10.c
        HW1/task11.c
        HW1/task12.c
        HW1/task13.c
        HW1/task14.c
        HW1/task15.c
        HW1/task13.c
        sem5/taskC.c
        sem5/taskB.c
        sem5/taskA.c
        HW2/strcat.c
        HW2/sudoku.c
)
